--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react-dom": "^18.1.0",
         "react-full-height": "^1.2.3",
         "react-iframe": "^1.8.5",
+        "react-pdf": "^6.2.2",
         "react-router-dom": "^6.9.0",
         "react-scripts": "5.0.1",
         "semantic-ui-css": "^2.5.0",
